# livestream

./: API_DOCS.md  FFMPEG_TROUBLESHOOTING.md  README.md  USER_GUIDE.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  crud.py  db.py  ffmpeg_finder.py  main.py  models.py  services.py  stream_manager.py  utils.py
backend/app/routers/: docs.py  overlays.py  stream.py
backend/tests/: test_overlays.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: HlsPlayer.tsx  OverlayManager.tsx
