[project]
name = "livestream-backend"
version = "0.1.0"
description = "FastAPI backend for RTSP livestream with overlay CRUD"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "fastapi~=0.111.0",
  "uvicorn[standard]~=0.30.0",
  "motor~=3.3.1",
  "pydantic~=2.8.0",
  "python-multipart~=0.0.9",
  "pillow~=10.4.0",
  "aiofiles~=23.2.1",
  "python-dotenv~=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3.0",
  "pytest-asyncio~=0.23.0",
  "httpx~=0.27.0",
  "ruff~=0.5.0"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000
reload = true

[tool.ruff]
line-length = 100
